[Controllers] Add get/update group image API
