# swagger.yml
@@ -213,6 +213,73 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /groups/{groupId}/image:
+    get:
+      tags:
+      - group
+      description: Get the group's profile image
+      operationId: getGroupImage
+      security:
+        - UserIDAuth: []
+      parameters:
+        - name: groupId
+          in: path
+          description: The internal ID of the group
+          required: true
+          type: string
+          format: uuid
+      produces:
+        - application/octet-stream
+        - application/json
+      responses:
+        200:
+          description: Success
+          schema:
+            type: string
+            format: binary
+            readOnly: true
+        400:
+          description: Invalid groupId
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      tags:
+      - group
+      description: Update the group's profile image
+      operationId: updateGroupImage
+      security:
+        - UserIDAuth: []
+      parameters:
+        - name: groupId
+          in: path
+          description: The internal ID of the group
+          required: true
+          type: string
+          format: uuid
+        - name: profileImage
+          in: formData
+          description: Success
+          required: true
+          type: file
+      consumes:
+        - multipart/form-data
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        400:
+          description: Invalid groupId
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /users/{userId}:
     get:
       tags:
